--- a/portal-empleo-frontend/package.json
+++ b/portal-empleo-frontend/package.json
@@ -28,6 +28,7 @@
     "@angular-devkit/build-angular": "~13.3.1",
     "@angular/cli": "~13.3.1",
     "@angular/compiler-cli": "~13.3.0",
+    "@tailwindcss/forms": "^0.5.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "autoprefixer": "^10.4.7",
