--- a/portal-empleo-frontend/angular.json
+++ b/portal-empleo-frontend/angular.json
@@ -30,8 +30,7 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.scss"
+            "styles": ["src/styles.scss"
             ],
             "scripts": []
           },
